feat(nix): split install nix and run home manager

--- a/setup/install
+++ b/setup/install
@@ -10,4 +10,5 @@ cd $SCRIPT_DIR
 export PATH="$PATH:$HOME/.nix-profile/bin"
 
 ./_install_nix $OPTION
+./_run_home_manager $OPTION
 ./_build_output_folder $OPTION
