feat(xsessions)!: add setup for xsession desktop and move script

--- a/setup/install
+++ b/setup/install
@@ -11,5 +11,6 @@ export PATH="$PATH:$HOME/.nix-profile/bin"
 
 ./_install_nix $OPTION
 ./_run_home_manager $OPTION
+./_install_xsessions_desktop $OPTION
 ./_set_pam $OPTION
 ./_build_output_folder $OPTION
