--- a/setup/install
+++ b/setup/install
@@ -12,6 +12,7 @@ export PATH="$PATH:$HOME/.nix-profile/bin"
 ./_install_nix $OPTION
 ./_run_home_manager $OPTION
 ./_install_xsessions_desktop $OPTION
+./_install_wayland_desktop $OPTION
 ./_set_pam $OPTION
 ./_set_zsh $OPTION
 ./_build_output_folder $OPTION
