--- a/setup/install
+++ b/setup/install
@@ -9,9 +9,13 @@ cd $SCRIPT_DIR
 
 export PATH="$PATH:$HOME/.nix-profile/bin"
 
+unset NIX_REMOTE
+
 ./_install_nix $OPTION
 ./_run_home_manager $OPTION
+./_run_system_manager $OPTION
 ./_install_xsessions_desktop $OPTION
 ./_set_pam $OPTION
 ./_set_zsh $OPTION
 ./_build_output_folder $OPTION
+./_set_user_permissions $OPTION
