--- a/work/setup/install
+++ b/work/setup/install
@@ -4,12 +4,11 @@ set -e
 
 OPTION=$1
 SCRIPT_DIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" &>/dev/null && pwd)"
+export WORK_DIR="$SCRIPT_DIR/.."
 
 cd $SCRIPT_DIR
 
 export PATH="$PATH:$HOME/.nix-profile/bin"
-
-unset NIX_REMOTE
 
 ./_install_nix $OPTION
 ./_run_home_manager $OPTION
